# improved_crypter

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.bat  build.sh
CrypterGUI/: MainForm.cs
resources/: resource.rc.in
src/: anti_analysis.hpp  crypter.hpp  encryption.hpp  evasion.hpp  gui.hpp  injection_methods.hpp  main.cpp  metamorphic_engine.hpp  pe_manipulator.hpp  shellcode_generator.hpp  stub_generator.hpp  syscall_utils.hpp
test/: CMakeLists.txt  test.cpp
